added reduce edge crossing for CircleLayout. Removed guava dependency.